--- a/htdocs/gcc.css
+++ b/htdocs/gcc.css
@@ -7,11 +7,11 @@
 
 /* Classpath versus libgcj merge status page. */
 
-.classpath-only  { background-color: #FFFFAA; }
-.libgcj-only     { background-color: #FFFFAA; }
-.VM-specific     { background-color: #CCCCFF; }
-.GCJ-specific    { background-color: #CCCCFF; }
-.needsmerge      { background-color: #FF9090; }
-.merged          { background-color: #22FF22; }
-.merged-but-diff { background-color: #FF4444; }
-.diff-but-diff   { background-color: #FF4444; }
+.classpath-only         { background-color: #FFFFAA; }
+.libgcj-only            { background-color: #FFFFAA; }
+.VM-specific            { background-color: #CCCCFF; }
+.GCJ-specific           { background-color: #CCCCFF; }
+.needsmerge             { background-color: #FF9090; }
+.merged                 { background-color: #22FF22; }
+.merged-expected-diff   { background-color: #22FF22; }
+.merged-unexpected-diff { background-color: #FF4444; }
