--- a/htdocs/wikidata/themes/Wordpress/Wordpress.css
+++ b/htdocs/wikidata/themes/Wordpress/Wordpress.css
@@ -1,5 +1,5 @@
 /**
- * $Id: Wordpress.css,v 1.3 2004/06/03 12:30:38 rurban Exp $
+ * $Id: Wordpress.css,v 1.1 2005/01/23 23:40:19 dberlin Exp $
  *
  * PhpWiki's Portland style sheet based on the original Wiki
  *
@@ -85,7 +85,7 @@ hr {
 /* This was copied (nearly verbatim) from a WordPress style.css */
 
 body {
-        background: #fff url(images/content-background.gif) repeat-x;
+        background: #fff url(images/content-background.png) repeat-x;
         font-family: Verdana, Geneva, sans-serif;
         margin: 0;
         padding: 0;
@@ -106,7 +106,7 @@ a:hover {
 }
 
 #header {
-        background: #036 url(images/header-background.gif) repeat-x;
+        background: #036 url(images/header-background.png) repeat-x;
         border-bottom: 1px solid #69c;
         font: italic normal 230% 'Times New Roman', Times, serif;
         letter-spacing: 0.2em;
@@ -132,7 +132,7 @@ a:hover {
 
 /* All PhpWiki #actionbar items are from WordPress #menu items */
 #actionbar {
-        background: #e8e8e8 url(images/menu-background.gif) repeat-x;
+        background: #e8e8e8 url(images/menu-background.png) repeat-x;
         border-left: 1px solid #9cf;
         border-bottom: 1px solid #9cf;
         padding: 30px 0 20px 20px;
@@ -252,7 +252,7 @@ input {
 }
 
 th.gridbutton {
-  background: #e8e8e8 url(images/menu-background.gif) repeat-x;
+  background: #e8e8e8 url(images/menu-background.png) repeat-x;
   color: black;
   font-family: Tahoma, sans-serif, Arial, Helvetica;
   font-size: small;
