--- a/htdocs/wikidata/themes/default/templates/debug.tmpl
+++ b/htdocs/wikidata/themes/default/templates/debug.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-html-*-
-  rcs_id('$Id: debug.tmpl,v 1.14 2004/06/14 11:26:52 rurban Exp $');
+  rcs_id('$Id: debug.tmpl,v 1.1 2005/01/23 23:40:21 dberlin Exp $');
 ?>
 <?php global $RUNTIMER; ?>
 <table width="%100" border="0" cellpadding="0" cellspacing="0">
@@ -7,11 +7,11 @@
 <?php /* Note: The Portland theme's debug.tmpl overrides this file with it's own non-graphical variant. */ ?>
 <div id="xhtml-validator"><a href="http://validator.w3.org/check/referer" target="_top"><img
         id="xhtml" border="0"
-        src="<?=$WikiTheme->_findData('buttons/vxhtml10.gif')?>"
+        src="<?=$WikiTheme->_findData('buttons/vxhtml10.png')?>"
         alt="Valid XHTML 1.0!" height="31" width="88" /></a>
 <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_top"><img
         id="css" border="0"
-        src="<?=$WikiTheme->_findData('buttons/vcss.gif')?>"
+        src="<?=$WikiTheme->_findData('buttons/vcss.png')?>"
         alt="Valid CSS!" height="31" width="88" /></a>
 </div>
 </td><td>
