--- a/htdocs/wikidata/themes/Crao/templates/actionbar.tmpl
+++ b/htdocs/wikidata/themes/Crao/templates/actionbar.tmpl
@@ -1,6 +1,6 @@
 <?php // -*-php-*-
-  rcs_id('$Id: actionbar.tmpl,v 1.3 2004/06/14 11:26:48 rurban Exp $');
-  if (!$page->get('locked') || $user->isAdmin())
+  rcs_id('$Id: actionbar.tmpl,v 1.4 2005/01/25 07:24:17 rurban Exp $');
+  if (!$page->get('locked') || $user->isAdmin() and $revision)
       $EditB = Button("edit",
                       $revision->isCurrent() ? _("Edit") : _("Edit Old Revision"));
   else
@@ -9,23 +9,31 @@
 //MSIE needs sticky.js
 ?>
 <div <?= isBrowserIE() ? "class=ie-actionbuttons" : "id=actionbuttons"?>>
-    <?= $EditB ?>
-    <?php if ($user->isAdmin()) { ?>
+<?= $EditB ?>
+<?php if ($user->isAdmin() or mayAccessPage('change',$page->getName())) { ?>
 <?=$Sep?><?= Button($page->get('locked') ? 'unlock' : 'lock') ?>
+<?php if (ENABLE_PAGEPERM) { ?>
+<?=$Sep?><?= Button('chown') ?>
+<?=$Sep?><?= Button('setacl') ?>
+<?php }} ?>
+<?php if ($user->isAdmin() or mayAccessPage('remove',$page->getName())) { ?>
 <?=$Sep?><?= Button('remove') ?>
 <?php } ?>
 <?=$Sep?><?= Button("PageHistory", _("PageHistory")) ?>
 <?=$Sep?><?= Button("diff") ?> 
 <?=$Sep?><?= Button("PageInfo", _("PageInfo")) ?>
 <?php if ((DEBUG and $request->getArg('action') == 'browse') || $user->isAdmin()) { ?> 
-    	<!-- Buttons really only for debugging -->
+<!-- Buttons really only for debugging -->
 <?=$Sep?><?= Button("DebugInfo", _("DebugInfo")) ?>
+<?=$Sep?><?= Button("PageDump", _("PageDump")) ?>
 <?php $purgeb = Button(array('nocache' => 'purge'),
                        _("PurgeHtmlCache"), $page->getName());
-              $purgeb->addTooltip(_("Purge HTML cache for this page. Regenerate from WikiMarkup when next accessed."));
+      $purgeb->addTooltip(_("Purge HTML cache for this page. Regenerate from WikiMarkup when next accessed."));
 ?>
 <?=$Sep?><?= $purgeb ?>
     <!-- End debugging buttons -->
 <?php } ?>
+<?php if (defined('USE_EXTERNAL_HTML2PDF') and USE_EXTERNAL_HTML2PDF) { ?> 
+    <?=$Sep?><?= Button("pdf") ?>
+<?php } ?>
 </div>
-
