--- a/htdocs/wikidata/themes/Crao/templates/body.tmpl
+++ b/htdocs/wikidata/themes/Crao/templates/body.tmpl
@@ -1,5 +1,5 @@
 <?php // -*-html-*-
-rcs_id('$Id: body.tmpl,v 1.4 2005/01/04 19:58:01 rurban Exp $');
+rcs_id('$Id: body.tmpl,v 1.5 2005/01/25 07:23:31 rurban Exp $');
 ?>
 <body<?= $WikiTheme->getMoreAttr('body') ?>>
 <div id="header"><?php // for top toolbars style sheet ?>
@@ -7,7 +7,7 @@ rcs_id('$Id: body.tmpl,v 1.4 2005/01/04 19:58:01 rurban Exp $');
 </div>
 <div class="toolbar"><?= Template('navbar') ?></div>
 <!-- Page content -->
-<div id="contenu">
+<div id="content">
 <?php if (isset($HEADER)) { ?>
 <!-- Page title -->
 <h1><?= $HEADER ?></h1>
