--- a/htdocs/wikidata/themes/Crao/templates/editpage.tmpl
+++ b/htdocs/wikidata/themes/Crao/templates/editpage.tmpl
@@ -1,25 +1,5 @@
 <!-- -*-html-*- -->
-<!-- $Id: editpage.tmpl,v 1.5 2005/01/04 20:14:59 rurban Exp $ -->
-<?php
-$WidthI = HTML::input(array('type' => 'text',
-                            'size' => 3,
-                            'maxlength' => 4,
-                            'class' => "numeric",
-                            'name' => 'pref[editWidth]',
-                            'value' => $request->getPref('editWidth'),
-                            'onchange' => 'this.form.submit();'));
-
-$HeightI = HTML::input(array('type' => 'text',
-                             'size' => 3,
-                             'maxlength' => 4,
-                             'class' => "numeric",
-                             'name' => 'pref[editHeight]',
-                             'value' => $request->getPref('editHeight'),
-                             'onchange' => 'this.form.submit();'));
-
-
-$s = $WikiTheme->getButtonSeparator();
-?>
+<!-- $Id: editpage.tmpl,v 1.6 2005/01/25 07:22:49 rurban Exp $ -->
 <?php if (isset($PREVIEW_CONTENT)) { ?>
   <p><strong><?=_("Preview only!  Changes not saved.")?></strong>
 <!-- FIXME: it would be nice to put a link to the #editarea anchor below,
@@ -48,14 +28,15 @@ $s = $WikiTheme->getButtonSeparator();
 <form method="post" id="editpage" name="editpage"
       action="<?= $request->getPostURL() ?>"
       accept-charset="<?=CHARSET?>">
+  <?php if (!empty($_GET['start_debug'])) echo '<input type="hidden" name="start_debug" value="1" >'; ?>
   <?php /* To clear beyond a larger logo, such as in the Hawaiian theme */ ?>
   <br clear="all" class="clear-floats" />
   <table width="100%">
     <tr><td><?= $EDIT_TOOLBAR ?></td>
         <td align="right"><div id="editarea-size">
     <?=_("Size").':'?>
-    <b><?=_("H")?></b> <?=$HeightI?>
-    <b><?=_("W")?></b> <?=$WidthI?>
+    <label for="pref[editHeight]"><b><?=_("H")?></b></label> <?=$HEIGHT_PREF?> 
+    <label for="pref[editWidth]"><b><?=_("W")?></b></label> <?=$WIDTH_PREF?>
     <noscript><?=Button("submit:", _("Adjust"), 'wikiaction')?></noscript>
   </div></td></tr></table>
   <fieldset class="editarea">
@@ -68,24 +49,22 @@ $s = $WikiTheme->getButtonSeparator();
 <br /> <?=$SUMMARY_INPUT?>
 </fieldset>
   <fieldset class="toolbar"> 
-    <?=$MINOR_EDIT_CB ?> <?=_("This is a minor change.")?>&nbsp;&nbsp;
-    <?=$OLD_MARKUP_CB?>  <?=_("Use old markup")?>
+    <?=$MINOR_EDIT_CB ?> <label for="edit[minor_edit]"><?=_("This is a minor change.")?></label>&nbsp;&nbsp;
+    <?=$OLD_MARKUP_CB?>  <label for="useOldMarkup"><?=_("Use old markup")?></label> <?=$OLD_MARKUP_CONVERT?>
   </fieldset>
   <fieldset class="toolbar">
     <?= $PREVIEW_B ?>
     <?php if ($SAVE_B)  { ?> 
-      <?=$s?><?= $SAVE_B ?>
+      <?=$SEP?><?= $SAVE_B ?>
     <?php } ?>
   </fieldset>
   <fieldset class="toolbar">
-    <?= $user->isSignedIn()
-        ? ''
-        : fmt("Author will be logged as %s.", HTML::em($user->getId())) ?>
+    <?=$AUTHOR_MESSAGE?>
     <label><?= Template('signin', array('FORMNAME' => 'editpage')) ?></label>
   </fieldset>
-<?php if ($user->isadmin()) { ?>
+<?php if ($user->isAdmin()) { ?>
   <fieldset class="toolbar">
-    <label><?= $LOCKED_CB ?> <?=_("Locked")?></label>
+    <?= $LOCKED_CB ?> <label for="edit[lock]"><?=_("Locked")?></label>
   </fieldset>
 <?php } ?>
 <hr noshade="noshade" />
