--- a/htdocs/wikidata/themes/MonoBook/templates/browse-footer.tmpl
+++ b/htdocs/wikidata/themes/MonoBook/templates/browse-footer.tmpl
@@ -1,10 +1,10 @@
 <?php // -*-php-*-
-  rcs_id('$Id: browse-footer.tmpl,v 1.2 2004/06/14 11:26:49 rurban Exp $');
+  rcs_id('$Id: browse-footer.tmpl,v 1.3 2005/01/25 07:18:19 rurban Exp $');
 ?>
 <?php // <hr class="printer" noshade="noshade" /> ?>
     <div class="visualClear"></div>
-      <div id="f-poweredbyico"><a href="http://www.phpwiki.org/"><img src="<?= $WikiTheme->getImageURL("poweredby_phpwiki_82x31.png") ?>" alt="PhpWiki" /></a></div>
-      <div id="f-copyrightico"><a href="http://www.gnu.org/copyleft/fdl.html"><img src="<?= $WikiTheme->getImageURL("gnu-fdl.png") ?>" alt='GNU Free Documentation License' /></a></div>
+      <div id="f-poweredbyico"><a href="http://www.phpwiki.org/"><img src="<?= $WikiTheme->getImageURL("poweredby_phpwiki_51x31.png") ?>" alt="Powered by PhpWiki" /></a></div>
+      <div id="f-copyrightico"><a href="http://www.gnu.org/copyleft/fdl.html"><img src="<?= $WikiTheme->getImageURL("gnu-fdl.png") ?>" alt="GNU Free Documentation License" /></a></div>
       <ul id="f-list">
 	<li id="f-lastmod"> <?= $WikiTheme->getOwnerMessage($page) ?>  <?= $WikiTheme->getLastModifiedMessage($revision) ?> <?= $WikiTheme->getAuthorMessage($revision) ?> </li>
 	  
