--- a/htdocs/wikidata/themes/Wordpress/Wordpress.css
+++ b/htdocs/wikidata/themes/Wordpress/Wordpress.css
@@ -1,5 +1,5 @@
 /**
- * $Id: Wordpress.css,v 1.1 2005/01/23 23:40:19 dberlin Exp $
+ * $Id: Wordpress.css,v 1.4 2005/01/26 20:49:32 uckelman Exp $
  *
  * PhpWiki's Portland style sheet based on the original Wiki
  *
