--- a/htdocs/wikidata/themes/default/templates/editpage.tmpl
+++ b/htdocs/wikidata/themes/default/templates/editpage.tmpl
@@ -1,22 +1,5 @@
 <!-- -*-html-*- -->
-<!-- $Id: editpage.tmpl,v 1.52 2004/12/19 18:28:22 rurban Exp $ -->
-<?php
-$WidthI = HTML::input(array('type' => 'text',
-                            'size' => 3,
-                            'maxlength' => 4,
-                            'class' => "numeric",
-                            'name' => 'pref[editWidth]',
-                            'value' => $request->getPref('editWidth'),
-                            'onchange' => 'this.form.submit();'));
-$HeightI = HTML::input(array('type' => 'text',
-                             'size' => 3,
-                             'maxlength' => 4,
-                             'class' => "numeric",
-                             'name' => 'pref[editHeight]',
-                             'value' => $request->getPref('editHeight'),
-                             'onchange' => 'this.form.submit();'));
-$s = $WikiTheme->getButtonSeparator();
-?>
+<!-- $Id: editpage.tmpl,v 1.55 2005/01/25 07:12:25 rurban Exp $ -->
 <?php if (isset($PREVIEW_CONTENT)) { ?>
   <p><strong><?=_("Preview only!  Changes not saved.")?></strong>
 <!-- FIXME: it would be nice to put a link to the #editarea anchor below,
@@ -53,46 +36,51 @@ $s = $WikiTheme->getButtonSeparator();
   <table width="100%">
     <tr><td><?= $EDIT_TOOLBAR ?></td>
         <td align="right"><div id="editarea-size">
-        <?=_("Size").':'?><b><?=_("H")?></b> <?=$HeightI?><b><?=_("W")?></b> <?=$WidthI?>
+    <?=_("Size").':'?>
+    <label for="pref[editHeight]"><b><?=_("H")?></b></label> <?=$HEIGHT_PREF?> 
+    <label for="pref[editWidth]"><b><?=_("W")?></b></label> <?=$WIDTH_PREF?>
     <noscript><?=Button("submit:", _("Adjust"), 'wikiaction')?></noscript>
   </div></td></tr></table>
   <a name="editarea"></a><?=$EDIT_TEXTAREA?>
 <!-- FIXME: fix layout, move CSS to CSS -->
 <div class="toolbar" style="text-align: center;">
-  <?=_("Summary").':'?> <?=$SUMMARY_INPUT?>
+  <label for="edit[summary]"><?=_("Summary").':'?></label> <?=$SUMMARY_INPUT?>
 </div>
 <table summary="Toolbar: Page editing options." class="toolbar" width="100%"
        cellpadding="0" cellspacing="0" border="0">
 <tr valign="middle">
   <td> 
-    <?=$MINOR_EDIT_CB ?> <?=_("This is a minor change.")?><br />
-    <?=$OLD_MARKUP_CB?>  <?=_("Use old markup")?> <?=$OLD_MARKUP_CONVERT?>
+    <?=$MINOR_EDIT_CB ?> <label for="edit[minor_edit]"><?=_("This is a minor change.")?></label><br />
+    <?=$OLD_MARKUP_CB?>  <label for="useOldMarkup"><?=_("Use old markup")?></label> <?=$OLD_MARKUP_CONVERT?>
   </td>
   <td align="center">
     <?= $PREVIEW_B ?>
     <?php if ($SAVE_B)  { ?> 
-      <?=$s?><?= $SAVE_B ?>
+      <?=$SEP?><?= $SAVE_B ?>
     <?php } ?>
   </td>
-  <td align="right">
-    <?= $user->isSignedIn()
-        ? ''
-        : fmt("Author will be logged as %s.", HTML::em($user->getId())) ?>
+  <td>&nbsp; <?=$AUTHOR_MESSAGE?></td>
+</tr>
+<tr>
+  <td>
+    <?php if ($user->isAdmin()) { ?> 
+    <?= $LOCKED_CB ?> <label for="edit[lock]"><?=_("Locked")?></label>
+    <?php } ?>
+  </td>
+  <td colspan="2" align="right">
+    <?php if (!$user->isAuthenticated()) { ?>
+    <?= Template('signin', array('FORMNAME' => 'editpage')) ?>
+    <?php } ?>
   </td>
 </tr>
-<?php if ($user->isadmin()) { ?>
-  <tr>
-    <td><?= $LOCKED_CB ?> <?=_("Locked")?></td>
-  </tr>
-<?php } ?>
 <?php if (0) {
 // Not yet supported within the same request. 
 // Better use a button to the external UpLoad page. 
 // Or fix action=edit to handle the uploaded filename within the same request.
 ?>
-  <tr>
-    <td><?plugin UpLoad ?></td>
-  </tr>
+<tr>
+  <td colspan="3"><?plugin UpLoad ?></td>
+</tr>
 <?php } ?>
 </table>
 
