--- a/htdocs/wikidata/themes/default/templates/head.tmpl
+++ b/htdocs/wikidata/themes/default/templates/head.tmpl
@@ -1,5 +1,5 @@
 <?php  // -*-html-*-
-  rcs_id('$Id: head.tmpl,v 1.21 2004/06/28 16:10:28 rurban Exp $');
+  rcs_id('$Id: head.tmpl,v 1.22 2005/01/25 07:15:47 rurban Exp $');
 ?>
 <head>
 <?php if (ENABLE_XHTML_XML and strstr($request->get('HTTP_ACCEPT'),'application/xhtml+xml')) { ?>
@@ -8,7 +8,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=<?=$charset?>" />
 <?php } ?>
 <meta http-equiv="content-language" content="<?=$GLOBALS['LANG']?>" />
-<?php $ROBOTS_CONTENT = $ROBOTS_META ? $ROBOTS_META : "noindex,nofollow"; ?>
+<?php $ROBOTS_CONTENT = isset($ROBOTS_META) ? $ROBOTS_META : "noindex,nofollow"; ?>
 <meta name="robots" content="<?= $ROBOTS_CONTENT ?>" />
 <?php if (!empty($PAGE_DESCRIPTION)) { ?>
 <meta name="description" content="<?=$PAGE_DESCRIPTION?>" />
@@ -32,11 +32,13 @@
        */ ?>
 <?php /* The next few lines are wrapped in an odd manner to allow gettext string extraction: cd locale;make */ ?>
 <link rel="home" title="<?=HOME_PAGE?>" href="<?=WikiURL(HOME_PAGE)?>" />
-<link rel="help" title="<?=_("HowToUseWiki")?>" href="<?=WikiURL(
+<link rel="help" title="<?=
+_("HowToUseWiki")?>" href="<?=WikiURL(
 _("HowToUseWiki"))?>" />
 <link rel="copyright" title="<?=COPYRIGHTPAGE_TITLE?>" href="<?=COPYRIGHTPAGE_URL?>" />
 <link rel="author" title="<?=AUTHORPAGE_TITLE?>" href="<?=AUTHORPAGE_URL?>" />
-<link rel="search" title="<?=_("FindPage")?>" href="<?=WikiURL(
+<link rel="search" title="<?=
+_("FindPage")?>" href="<?=WikiURL(
 _("FindPage"))?>" />
 <?php /**
        * Provide alternate variations of the page content:
@@ -64,27 +66,29 @@ _("FindPage"))?>" />
 ?>
 <link rel="alternate" type="application/rss+xml" title="RSS" href="<?=WikiURL(
 _("RecentChanges"), array('format' => 'rss'))?>" />
-
-<?php 
-      /**
+<?php /**
        * Add some user-specific links.
        */ ?>
 <?php if (!$user->isSignedIn()) {
       /* For users not signed in */ ?>
-<link rel="bookmark" title="<?=_("SandBox")?>" href="<?=WikiURL(
+<link rel="bookmark" title="<?=
+_("SandBox")?>" href="<?=WikiURL(
 _("SandBox"))?>" />
-<link rel="bookmark" title="<?=_("WikiWikiWeb")?>" href="<?=WikiURL(
+<link rel="bookmark" title="<?=
+_("WikiWikiWeb")?>" href="<?=WikiURL(
 _("WikiWikiWeb"))?>" />
 <?php } ?>
 
 <?php if ($user->isAdmin()) {
       /* Only for the Administrator */ ?>
-<link rel="bookmark" title="<?=_("PhpWikiAdministration")?>" href="<?=WikiURL(
+<link rel="bookmark" title="<?=
+_("PhpWikiAdministration")?>" href="<?=WikiURL(
 _("PhpWikiAdministration"))?>" />
 <?php } ?>
 <?php if ($user->isSignedIn()) {
       /* For signed-in users */ ?>
-<link rel="bookmark" title="<?=_("UserPreferences")?>" href="<?=WikiURL(
+<link rel="bookmark" title="<?=
+_("UserPreferences")?>" href="<?=WikiURL(
 _("UserPreferences"))?>" />
 <?php /* User's calendar page
        */
@@ -112,3 +116,75 @@ _("UserPreferences"))?>" />
 <title><?= WIKI_NAME.$pagetitle ?></title>
 <?= $WikiTheme->getMoreHeaders() ?>
 </head>
+<?php
+// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -                         
+// $Log: head.tmpl,v $
+// Revision 1.22  2005/01/25 07:15:47  rurban
+// fix ROBOTS_META warning, break xgettext strings, add log as comment
+//
+// Revision 1.4  2004/06/18 08:40:39  rurban
+// renamed global $Theme to $WikiTheme (gforge nameclash)
+//
+// Revision 1.3  2004/06/04 20:34:11  rurban
+// Put several _("") into new lines if inside attr="", so that xgettext
+// can pick it up. (Suggested by Pierrick Meignen)
+//
+// Revision 1.2  2004/06/03 12:30:38  rurban
+// support edit_toolbar in other themes
+//
+// Revision 1.1  2004/05/12 19:42:16  rurban
+// new Crao theme by Arnaud Fontaine and Laurent Lunati
+//
+// Revision 1.13  2003/12/05 15:36:39  carstenklapp
+// Improvements: to make it easier to run multiple wikis off of one set
+// of code, urls for link rel author and copyright now defined in
+// index.php.
+// Bugfix: updated language meta tag to use DEFAULT_LANGUAGE constant
+// instead of old LANG global.
+// Internal change: Eliminated RECENT_CHANGES constant from RSS link,
+// just use the easily localizable _("RecentChanges").
+// Typo fixed.
+//
+// Revision 1.12  2003/11/22 17:58:43  carstenklapp
+// Minor internal change: Removed redundant call to gettext within
+// fmt(). (locale make: head.tmpl:49: warning: keyword nested in keyword
+// arg)
+//
+// Revision 1.11  2003/11/21 23:06:12  carstenklapp
+// Bugfix: Some <link rel=...> links in Mozilla/iCab were always linking
+// to the english pages even when DEFAULT_LANGUAGE != 'en'. (Rewrapped
+// text for a more complete xgettext string extraction: 'cd
+// phpwiki/locale;make' to update po/mo files).
+//
+// Revision 1.10  2003/03/07 20:51:59  dairiki
+// New feature: Automatic extraction of keywords (for the meta keywords tag)
+// from Category* and Topic* links on each page.
+//
+// Revision 1.9  2003/03/07 02:45:51  dairiki
+// Rename BASE_URL to PHPWIKI_BASE_URL.  Lycos pre-defines BASE_URL (to
+// the wrong thing).
+//
+// Revision 1.8  2003/03/05 21:38:15  dairiki
+// More HTML comment reduction patches by "Klaus-Guenter Leiss"
+// <Leiss.Klaus-Guenter@epost.de>
+//
+// (With a few adjustments by me.  Any bugs are probably my fault.)
+//
+// Revision 1.7  2003/02/26 22:27:17  dairiki
+// Fix and refactor FrameInclude plugin (more or less).
+//
+// (This should now generate valid HTML.  Woohoo!)
+//
+// The output when using the Sidebar theme is ugly enough that it should
+// be considered broken.  (But the Sidebar theme appears pretty broken in
+// general right now.)
+//
+// (Personal comment (not to be taken personally): I must say that I
+// remain unconvinced of the usefulness of this plugin.)
+//
+// Revision 1.6  2003/01/11 22:29:47  carstenklapp
+// Tweak redundant bookmark title when browsing a custom home page with
+// the same name as the wiki (i.e. avoid titles like "MyWiki - MyWiki"
+// when HOME_PAGE==WIKI_NAME)
+//
+?>
