--- a/htdocs/wikidata/themes/default/templates/redirect.tmpl
+++ b/htdocs/wikidata/themes/default/templates/redirect.tmpl
@@ -1,5 +1,5 @@
 <?php
-rcs_id('$Id: redirect.tmpl,v 1.3 2004/06/14 11:26:53 rurban Exp $');
+rcs_id('$Id: redirect.tmpl,v 1.4 2005/01/22 12:09:05 rurban Exp $');
 /* 
  * Redirect output.
  */
@@ -9,7 +9,7 @@ printf("<?xml version=\"1.0\" encoding=\"%s\"?>\n", CHARSET);
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<!-- $Id: redirect.tmpl,v 1.3 2004/06/14 11:26:53 rurban Exp $ -->
+<!-- $Id: redirect.tmpl,v 1.4 2005/01/22 12:09:05 rurban Exp $ -->
 <meta http-equiv="Content-Type" content="text/html; charset=<?=CHARSET?>" />
 <meta name="robots" content="noindex, nofollow" />
 <meta name="generator" content="PhpWiki" />
@@ -26,6 +26,8 @@ printf("<?xml version=\"1.0\" encoding=\"%s\"?>\n", CHARSET);
       location.replace(url);
     else if (typeof location.assign == 'function')
       location.assign(url);
+    else if (self.location.href)
+      self.location.href = url;
     else
       window.location = url;
   }
